# dde-shell-bck

./: CMakeLists.txt
cmake/: DDEShellPackageMacros.cmake  DSBuildConfig.cmake
coronas/: CMakeLists.txt
coronas/osd/: CMakeLists.txt  osdcorona.cpp  osdcorona.h  test.sh
coronas/osd/audio/: CMakeLists.txt  audioapplet.cpp  audioapplet.h
coronas/osd/audio/package/: main.qml
coronas/osd/brightness/: brightnessapplet.cpp  brightnessapplet.h
coronas/osd/brightness/package/: main.qml
coronas/osd/default/package/: main.qml
coronas/osd/displaymode/: CMakeLists.txt  displaymodeapplet.cpp  displaymodeapplet.h
coronas/osd/displaymode/package/: main.qml
coronas/osd/kblayout/: kblayoutapplet.cpp  kblayoutapplet.h
coronas/osd/kblayout/package/: main.qml
coronas/osd/package/: main.qml
debian/: changelog  control  libdde-shell.install  rules
example/: CMakeLists.txt
example/applet-example/: CMakeLists.txt  main.qml
example/applet-example-data/: CMakeLists.txt  main.qml
example/applet-example-data/package/: main.qml
example/applet-example/package/: main.qml
example/applet-example/package/control/: TextEx.qml
example/containment-example/: CMakeLists.txt  main.qml  metadata.json
example/containment-example/package/: main.qml
example/corona-example/: CMakeLists.txt  examplecorona.cpp  examplecorona.h  main.qml
example/corona-example/package/: main.qml  metadata.json
frame/: CMakeLists.txt  applet.cpp  applet.h  appletitem.cpp  appletitem.h  containment.cpp  containment.h  containmentitem.cpp  containmentitem.h  corona.cpp  corona.h  dstypes.cpp  dstypes.h  pluginfactory.cpp  pluginfactory.h  pluginloader.cpp  pluginloader.h  pluginmetadata.cpp  pluginmetadata.h  qmlengine.cpp  qmlengine.h
frame/plugin/: qmlplugin.h
frame/private/: applet_p.h  appletitem_p.h  containment_p.h  corona_p.h
frame/quick/: appletitem.cpp  appletitem.h  containmentitem.cpp  containmentitem.h  panelview.cpp  panelview.h  qmlengine.cpp  qmlplugin.cpp
misc/: DDEShellConfig.cmake.in
shell/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
